<resources>
    <string name="app_name">Memory Ninja</string>
    <string name="expression_notification_channel_id">Reminders</string>
    <string name="notification_title_expression_reminder">Let\'s remember!</string>
    <string name="expression_notification_channel_explanation">Reminds you of expressions at a glance</string>
    <string name="expression_notification_action_known">I know!</string>
    <string name="expression_notification_action_unknown">¯\\_(ツ)_/¯</string>
    <string name="main_error_title">Something went wrong…</string>
    <string name="login_skip">Skip</string>
    <string name="login_title">Introduce yourself…</string>
    <string name="login_login_with_phone">Login with phone number</string>
    <string name="login_phone_label">Phone number</string>
    <string name="storage_option_local">Local\n(SQLite)</string>
    <string name="storage_option_remote">Remote\n(Firestore)</string>
    <string name="storage_option_title">Where should we store your expressions?</string>
    <string name="save">Save</string>
    <string name="edit_expression_expression_label">Expression</string>
    <string name="edit_expression_translation_label">Translation</string>
    <string name="edit_expression_title">Edit Expression</string>
    <string name="new_expression_title">New Expression</string>
    <string name="expression_level_new">New</string>
    <string name="expression_level_basic">Basic</string>
    <string name="expression_level_intermediate">Intermediate</string>
    <string name="expression_level_advanced">Advanced</string>
    <string name="expression_level_know">Known</string>
    <string name="edit_expression_level_label">Level</string>
    <string name="action_exit">Logout</string>
    <string name="expressions_empty_state">No expressions to show…</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="expression_filter_title">Show expressions with level…</string>
    <string name="settings_title">Settings</string>
    <string name="settings_quiz_frequency_label">Quiz frequency</string>
    <string name="settings_quiz_frequency_every_label">Every</string>
    <string name="settings_quiz_frequency_hours_label">hour(s)</string>
    <string name="settings_quiz_frequency_sub_label_format">" -   Every %dh"</string>
</resources>
