<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.chip.ChipGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/levelGroup"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="38dp"
    android:layout_marginEnd="38dp"
    android:layout_marginBottom="54dp"
    app:layout_constraintBottom_toTopOf="@+id/saveBtn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:singleSelection="true"
    tools:background="@color/colorPrimary"
    tools:layout_width="match_parent">

    <com.google.android.material.chip.Chip
        android:id="@+id/chipNew"
        style="@style/Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expression_level_new" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipBasic"
        style="@style/Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expression_level_basic" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipIntermediate"
        style="@style/Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expression_level_intermediate" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipAdvanced"
        style="@style/Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expression_level_advanced" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipKnown"
        style="@style/Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expression_level_know" />

</com.google.android.material.chip.ChipGroup>
